k8s/deployment.demo.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: trpl-regtrack-insights-worker-demo
  namespace: demo
  labels:
    app: trpl-regtrack-insights-worker-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: trpl-regtrack-insights-worker-demo

  template:
    metadata:
      labels:
        app: trpl-regtrack-insights-worker-demo

    spec:
      automountServiceAccountToken: false

      imagePullSecrets:
        - name: acr-pull-secret

      containers:
        - name: trpl-regtrack-insights-worker-demo

          image: conatinerimages.azurecr.io/demo/trpl-regtrack-insights-worker:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"

            limits:
              cpu: "1"
              memory: "2Gi"

          securityContext:
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL
