k8s/deployment.production.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: trpl-regtrack-insights-worker
  namespace: production
  labels:
    app: trpl-regtrack-insights-worker

spec:
  replicas: 3

  selector:
    matchLabels:
      app: trpl-regtrack-insights-worker

  template:
    metadata:
      labels:
        app: trpl-regtrack-insights-worker

    spec:
      automountServiceAccountToken: false

      imagePullSecrets:
        - name: acr-pull-secret

      containers:
        - name: trpl-regtrack-insights-worker

          image: conatinerimages.azurecr.io/production/trpl-regtrack-insights-worker:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"

            limits:
              cpu: "1"
              memory: "4Gi"

          securityContext:
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL
