k8s/service.demo.yaml
apiVersion: v1
kind: Service

metadata:
  name: trpl-regtrack-insights-worker-demo
  namespace: demo

  labels:
    app: trpl-regtrack-insights-worker-demo

spec:
  type: ClusterIP

  selector:
    app: trpl-regtrack-insights-worker-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
