k8s/service.insights-api.staging.yaml
apiVersion: v1
kind: Service

metadata:
  name: trpl-regtrack-insights-api
  namespace: staging

  labels:
    app: trpl-regtrack-insights-api

spec:
  type: ClusterIP

  selector:
    app: trpl-regtrack-insights-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
