k8s/service.production.yaml
apiVersion: v1
kind: Service

metadata:
  name: trpl-regtrack-insights-worker
  namespace: production

  labels:
    app: trpl-regtrack-insights-worker

spec:
  type: ClusterIP

  selector:
    app: trpl-regtrack-insights-worker

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
