k8s/service.staging.yaml
apiVersion: v1
kind: Service

metadata:

  name: trpl-regtrack-insights-worker
  namespace: staging

  labels:
    app: trpl-regtrack-insights-worker


spec:
  type: ClusterIP

  selector:

    app: trpl-regtrack-insights-worker

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
